syntax = "proto3";

package grpc_service;

option go_package = "./";

import "src/transport/proto/src/app/models.proto";

message ProjectsGetRequest {
  repeated uint64 IDs = 1;
}

message ProjectsGetResponse {
  repeated Project List = 1;
}

message ProjectsGetOneRequest {
  uint64 ID = 1;
}

message ProjectsGetOneResponse {
  Project Project = 1;
}

service ProjectsService {
  rpc Get(ProjectsGetRequest) returns (ProjectsGetResponse);
  rpc GetOne(ProjectsGetOneRequest) returns (ProjectsGetOneResponse);
}