syntax = "proto3";

package grpc_service;

option go_package = "./";

import "src/transport/proto/src/users-service/models.proto";

message BasicAuthenticationAuthRequest {
  string Username = 1;
  string Password = 2;
}

message BasicAuthenticationAuthResponse {
  User User = 1;
}

service BasicAuthentication {
  rpc Auth(BasicAuthenticationAuthRequest) returns (BasicAuthenticationAuthResponse);
}